<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dip">

        <ImageView
            android:id="@+id/tesd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/login_title" />

        <LinearLayout
            android:id="@+id/todd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tesd1"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="30dip"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip"
                    android:paddingLeft="5dip"
                    android:paddingRight="10dip"
                    android:paddingTop="10dip"
                    android:text="@string/Login_account"
                    android:textSize="@dimen/text_normal" />

                <EditText
                    android:id="@+id/accountInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/Login_account_hint"
                    android:inputType="text"
                    android:padding="10dip"
                    android:textSize="@dimen/text_normal"></EditText>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/color_line" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dkld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/todd"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dip"
                    android:paddingLeft="5dip"
                    android:paddingRight="10dip"
                    android:paddingTop="10dip"
                    android:text="@string/Login_password"
                    android:textSize="@dimen/text_normal" />

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/Login_password_hint"
                    android:inputType="textPassword"
                    android:padding="10dip"
                    android:textSize="@dimen/text_normal"></EditText>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/color_line" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dkld"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSignIn"
                style="@style/btn_yellow_style"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/LOGIN_SIGN_IN"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/sort_button_selector"
                android:padding="10dp"
                android:text="游客登录" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFindPwdBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sort_button_selector"
                android:gravity="right|center_vertical"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip"
                android:text="@string/LOGIN_pwd_back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingBottom="5dip"
                android:paddingTop="5dip">

                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:background="@color/color_line" />
            </LinearLayout>

            <Button
                android:id="@+id/btnRegist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sort_button_selector"
                android:gravity="left|center_vertical"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip"
                android:text="@string/LOGIN_register" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>